# mspc-sentinel-2-check

./: .gitignore  README.md  pyproject.toml
notebooks/: analysis.ipynb  analysis.md
scripts/: prefixes-year.sh  render
src/mspc_sentinel_2_check/: __init__.py  analyze.py  cli.py  constants.py  prefixes.py
