[project]
name = "mspc-sentinel-2-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.2",
    "httpx>=0.28.1",
    "obstore>=0.9.3",
    "pyarrow>=24.0.0",
    "rustac>=0.9.9",
    "tqdm>=4.67.3",
    "typer>=0.15.1",
]

[project.scripts]
mspc-sentinel-2-check = "mspc_sentinel_2_check.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mspc_sentinel_2_check"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.1",
]
